--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -23,7 +23,7 @@
 
 
     "Comment2": "/////////////////////////////// This is for Page Langing ////////////////////////",
-    "TitleTop": "معلّمون ملهون متعلّمون استثنائيون",
+    "TitleTop": "معلّمون ملهمون متعلّمون استثنائيون",
     "HeaderTop": "أشرك الطلاب بشكل لم يسبق له مثيل من خلال الألعاب الترفيهية والتعليمية المصممة خصيصًا لمنهجك الدراسي",
     "buttonJoin": "انضم إلينا الآن",
     "MissOut": "لا تفوت الفرصة!",
@@ -48,7 +48,11 @@
     "getInTouch": "تواصل معنا",
     "contact": "تواصل معنا",
     "name": "الإسم",
-    "message": "نص الرسالة"
+    "message": "نص الرسالة",
+    "Thanks": "شكراً",
+    "subscribed": "سيتم تنبيهك بأحدث الالعاب التعليمية",
+    "msg": "شكراً على الرسالة، سنعود إليك بأسرع وقت",
+    "close":"اغلق"
 
 
   }
