--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,7 +49,11 @@
     "getInTouch": "Get in touch with us",
     "contact": "Contact us",
     "name": "name",
-    "message": "Type here"
+    "message": "Type here",
+    "Thanks": "Thank you",
+    "subscribed": "You will be updated with our latest educational games",
+    "msg": "Thank you for your message, we will get back to you as soon as possible",
+    "close":"close"
 
 
 }
