--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -52,7 +52,8 @@
     "Thanks": "شكراً",
     "subscribed": "سيتم تنبيهك بأحدث الالعاب التعليمية",
     "msg": "شكراً على الرسالة، سنعود إليك بأسرع وقت",
-    "close":"اغلق"
+    "close":"اغلق",
+    "updates":"ادخل إيميلك لتنضم إلينا ويصلك أحدث الألعاب"
 
 
   }
