--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,7 +53,7 @@
     "Thanks": "Thank you",
     "subscribed": "You will be updated with our latest educational games",
     "msg": "Thank you for your message, we will get back to you as soon as possible",
-    "close":"close"
-
+    "close":"close",
+    "updates":"Write your email so you can join us as soon as we are up and running"
 
 }
