--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -53,7 +53,29 @@
     "subscribed": "سيتم تنبيهك بأحدث الالعاب التعليمية",
     "msg": "شكراً على الرسالة، سنعود إليك بأسرع وقت",
     "close":"اغلق",
-    "updates":"ادخل إيميلك لتنضم إلينا ويصلك أحدث الألعاب"
+    "updates":"ادخل إيميلك لتنضم إلينا ويصلك أحدث الألعاب",
+
+    
+
+    "comment3": "//////////////////////////////////   This is the Game Content  ////////////////////////////////////////////////////",
+    "SpinningH1": "اختبار العجلة الدوارة",
+    "SpinningH2":"قم بإنشاء عجلة دوارة تحتوي على أسئلة اختيارية متعددة عشوائية لجمهورك.",
+    "content": "أضف محتوى",
+    "CTitle": "*عنوان النشاط",
+    "CDescription": "الوصف",
+    "CQuestion": "*أضف الأسئلة",
+    "CAddTitle": "أضف العنوان",
+    "CAddDescription": "أضف الوصف",
+    "CAddQuestion": "أضف سؤال",
+    "CAddAnswer": "أضف إجابة",
+    "CQ": "س",
+    "addA": "إضافة إجابة",
+    "addQ": "إضافة سؤال جديد",
+    "Next": "التالي",
+    "warning": "تحذير",
+    "least2": "كل سؤال يحتوي إجابتين على الأقل، لا يمكنك حذف إجابات اكثر",
+    "max4": "كل سؤال يحتوي على 4 إجابات كحد أقصى، لا يمكنك إضافة إجابات أكثر",
+    "ok": "حسناً"
 
 
   }
